<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity"
    android:theme="@style/HunterTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logoofficialhunter"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="75dp"
            android:layout_marginTop="10dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login"
            android:textColor="@color/birugelap"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/birugelap"
                    app:backgroundTint="@color/birugelap"
                    android:hint="@string/alamatemail"
                    />

            </android.support.design.widget.TextInputLayout>
            <!--<EditText-->
                <!--android:id="@+id/editText"-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:autofillHints=""-->
                <!--android:ems="10"-->
                <!--android:hint="@string/alamatemail"-->
                <!--android:inputType="textPersonName"-->
                <!--android:textColor="@color/birugelap"-->
                <!--app:backgroundTint="@color/birugelap"-->
                <!--/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/text_input_password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/katasandi"
                    android:inputType="textPassword"
                    android:textColor="@color/birugelap"
                    app:backgroundTint="@color/birugelap"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/biru"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ingatsaya"
                android:textColor="@color/birugelap"
                android:foreground="?attr/selectableItemBackground"/>

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/lupakatasandi"
                android:textColor="@color/putih"
                android:textAllCaps="false"
                android:background="@drawable/lupakatasandi_button"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="forgotPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@drawable/login_button"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/putih"
                android:onClick="confirmInput"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/daftar"
                android:textSize="16dp"
                android:textAllCaps="false"
                android:background="@drawable/daftar_button"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:onClick="signUp"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>