<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"

    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".BiodataActivity"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logoofficialhunter_white"
            android:layout_gravity="center"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
           >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_mediumitalic"
                    android:text="@string/keterangandaftar"
                    android:textColor="@color/putih"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:theme="@style/StyledEditText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/namalengkap"
                        android:inputType="text"
                        android:textColor="@color/putih"
                        android:textColorHint="@color/putih"
                        android:textSize="18sp"
                        app:backgroundTint="@color/putih" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:text="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/putih"
                    android:theme="@style/StyledEditText">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/katasandi"
                        android:inputType="textPassword"
                        android:textColor="@color/putih"
                        android:textSize="18sp"
                        app:backgroundTint="@color/putih" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/button3"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button"
                    android:fontFamily="@font/montserrat_semibold"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textColor="@color/putih"
                    android:textSize="16dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/persetujuan"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/putih" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>