<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_login">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logoofficialhunter_white"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_mediumitalic"
                android:text="@string/keteranganforgot"
                android:textColor="@color/putih"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:theme="@style/StyledEditText">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/alamatemail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/putih"
                    android:textColorHint="@color/putih"
                    android:textSize="18sp"
                    app:backgroundTint="@color/putih" />

            </android.support.design.widget.TextInputLayout>
            <!--<EditText-->
            <!--android:id="@+id/editText"-->
            <!--android:layout_width="300dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:autofillHints=""-->
            <!--android:ems="10"-->
            <!--android:hint="@string/alamatemail"-->
            <!--android:inputType="textPersonName"-->
            <!--android:textColor="@color/birugelap"-->
            <!--app:backgroundTint="@color/birugelap"-->
            <!--/>-->

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/login_button"
                android:fontFamily="@font/montserrat_semibold"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/perbaruipassword"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="16dp"
                android:onClick="DaftarActivity"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/petunjukperbaruanpassword"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/putih" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>