<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetpasswordActivity"
    android:background="@drawable/gradient"
    android:theme="@style/HunterTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            app:srcCompat="@drawable/logoofficialhunter" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Kata Sandi Baru"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/birugelap"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="181dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/katasandi"
                    android:inputType="textPassword"
                    android:textColor="@color/birugelap"

                    app:backgroundTint="@color/birugelap" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/katasandilagi"
                    android:inputType="textPassword"
                    android:textColor="@color/birugelap"
                    app:backgroundTint="@color/birugelap" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_mediumitalic"
            android:text="Masukan kata sandi baru"
            android:textAlignment="center"
            android:textColor="@color/hitam"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/login_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/perbaruikatasandi"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="16dp"

                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>